status/fe/felix/0.2.0/macos/darwin-21.6.0/gnat=10.3.2/felix-0.2.0.yaml.log
Test ran at 2024-08-01 00:34:45.051683+00:00

SOLUTION:
felix=0.2.0: X/Open Native Language System (NLS) for Ada
Origin: commit 7409bde64df3467f6d8b6aceb96eba2aac920014 from https://github.com/lkujaw/felix.git
Properties:
   Author: Lev Kujawski
   Description: X/Open Native Language System (NLS) for Ada
   case Distribution is
      when Msys2 => Environment: C_INCLUDE_PATH=${C_INCLUDE_PATH}:${DISTRIB_ROOT}/usr/include/
   case OS is
      when Windows => GPR External: SYSTEM_API := WIN32
      when others => GPR External: SYSTEM_API := POSIX
   License: MIT-0
   Maintainer: Lev Kujawski <int21h@mailbox.org>
   Maintainers_Logins: lkujaw
   Name: felix
   Tag: ada1995
   Tag: i18n
   Tag: nls
   Tag: localization
   Tag: localisation
   Tag: l10n
   Version: 0.2.0
   Website: https://github.com/lkujaw/felix
Dependencies (direct):
   case OS is
      when Windows => msys2_runtime>=3.0


LOG:
Note: Deploying felix=0.2.0...
Note: Building felix/felix.gpr...
Setup
   [mkdir]        object directory for project Felix
   [mkdir]        library directory for project Felix
Compile
   [C]            cio.c
   [C]            nls.c
   [Ada]          stantext.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_stdio.h:68,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdio.h:78,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/c39f96e7-41f5-498b-84ed-55c4e46cf3c6/felix_0.2.0_7409bde6/src/cio.c:28:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_locale.h:40,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/locale.h:40,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/c39f96e7-41f5-498b-84ed-55c4e46cf3c6/felix_0.2.0_7409bde6/src/nls.c:28:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of nls.c failed
   compilation of cio.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/c39f96e7-41f5-498b-84ed-55c4e46cf3c6/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/c39f96e7-41f5-498b-84ed-55c4e46cf3c6/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/c39f96e7-41f5-498b-84ed-55c4e46cf3c6/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x104c39000
Call stack traceback locations:
0x105541415 0x105214e83 0x105427df9 0x105428581 0x105388ac3 0x105386f99 0x1053a3873 0x1053efdc1 0x1053ee81a 0x1053a39b8 0x105387349 0x104c989c1 0x104ca9578 0x104cae01c 0x104d3405c 0x104d3f3b8 0x104c3a605 0x104c3d914


Warning: felix=0.2.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
